2008-08-16  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* e-icon-factory.c: (e_icon_size_to_gtk_icon_size),
	(e_icon_factory_get_icon_filename), (e_icon_factory_get_icon):
	Make evolution respect GTK_ICON_SIZE changes, part of bug #416258.

2008-08-14  Matthew Barnes  <mbarnes@redhat.com>

	* e-util.c (e_display_help):
	New convenience function for launching help from Evolution.
	Displays an error dialog over the given parent window if an
	error occurs.

2008-08-13  Matthew Barnes  <mbarnes@redhat.com>

	* e-gui-utils.c (e_create_image_widget):
	Remove this unused function.

	* e-util.h: Cosmetic cleanups.

2008-08-11  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #546892

	* e-gui-utils.c:
	* e-popup.c:
	Prefer gtk_image_new_from_icon_name() over e_icon_factory_get_image().

	* e-icon-factory.c (e_icon_factory_get_image):
	Kill this function.  Use gtk_image_new_from_icon_name().

	* e-icon-factory.c (e_icon_factory_get_icon_list):
	Kill this function.  Use gtk_window_set_icon_name().

2008-07-31  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #545568

	* e-plugin.c (ep_load):
	Make sure system plugins are enabled on startup.

2008-07-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #540282

	* e-print.c:
	Store printer and page settings in a key file rather than GConf.
	Also properly apply page settings to print operations, including
	custom margins.

2008-07-01  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #540972

	* e-plugin.c: (ep_load): Small memory leak fix.

2008-06-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #509595

	* e-logger.c: (e_logger_get_logs): Do not crash if file does not
	exists. Also be able to read lines more than 249 characters long.

2008-06-08  Matthew Barnes  <mbarnes@redhat.com>

	* e-logger.[ch]: Code cleanup.

2008-06-06  Tor Lillqvist  <tml@novell.com>

	* e-plugin.c (epl_loadmodule): Tell which plugin it could not load
	in the warning message.
